# oca-report

./: README.md
odoo-bringout-oca-mis-builder-mis_builder/: README.md  pyproject.toml
odoo-bringout-oca-mis-builder-mis_builder_budget/: README.md  pyproject.toml
odoo-bringout-oca-mis-builder-mis_builder_demo/: README.md  pyproject.toml
odoo-bringout-oca-report-print-send-base_report_to_label_printer/: README.md  pyproject.toml
odoo-bringout-oca-report-print-send-base_report_to_printer/: README.md  pyproject.toml
odoo-bringout-oca-report-print-send-base_report_to_printer_mail/: README.md  pyproject.toml
odoo-bringout-oca-report-print-send-pingen/: README.md  pyproject.toml
odoo-bringout-oca-report-print-send-pingen_env/: README.md  pyproject.toml
odoo-bringout-oca-report-print-send-printer_zpl2/: README.md  pyproject.toml
odoo-bringout-oca-report-print-send-printer_zpl2/doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  SECURITY.md  USAGE.md  WIZARDS.md
odoo-bringout-oca-report-print-send-printer_zpl2/printer_zpl2/i18n/: bs.po
odoo-bringout-oca-report-print-send-printing_simple_configuration/: README.md  pyproject.toml
odoo-bringout-oca-report-print-send-remote_report_to_printer/: README.md  pyproject.toml
odoo-bringout-oca-reporting-engine-base_comment_template/: README.md  pyproject.toml
odoo-bringout-oca-reporting-engine-bi_sql_editor/: README.md  pyproject.toml
odoo-bringout-oca-reporting-engine-bi_view_editor/: README.md  pyproject.toml
odoo-bringout-oca-reporting-engine-bi_view_editor_spreadsheet_dashboard/: README.md  pyproject.toml
odoo-bringout-oca-reporting-engine-report_async/: README.md  pyproject.toml
odoo-bringout-oca-reporting-engine-report_company_details_translatable/: README.md  pyproject.toml
odoo-bringout-oca-reporting-engine-report_context/: README.md  pyproject.toml
odoo-bringout-oca-reporting-engine-report_csv/: README.md  pyproject.toml
odoo-bringout-oca-reporting-engine-report_display_name_in_footer/: README.md  pyproject.toml
odoo-bringout-oca-reporting-engine-report_generate_helper/: README.md  pyproject.toml
odoo-bringout-oca-reporting-engine-report_py3o_fusion_server/: README.md  pyproject.toml
odoo-bringout-oca-reporting-engine-report_py3o_fusion_server/doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  SECURITY.md  USAGE.md
odoo-bringout-oca-reporting-engine-report_py3o_fusion_server/report_py3o_fusion_server/i18n/: bs.po
(+451 files in other folders)
